# hocus_pocus

./: pyproject.toml  setup.py
example/latex/: .gitignore  mwe.tex  tasks.py
hocus_pocus/: tex.py
invocations/: py.py  tex.py
